--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/datepicker.css" />
-    <script src="Scripts/jquery-1.7.2.js" type="text/javascript"></script>
+    <script type="text/javascript" src="Scripts/jquery-1.8.0.js"></script>
     <script src="Scripts/knockout-2.1.0.debug.js" type="text/javascript"></script>
     <script src="Scripts/knockout.mapping-latest.debug.js" type="text/javascript"></script>
     <script src="Scripts/sha-1.js" type="text/javascript"></script>
